welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:3: error: ';' expected but '{' found.
} while (!sortieTrouvee()) {
                           ^